; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_SpeedTest16bits.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_SpeedTest16bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i8*, i8* }

@.str = private unnamed_addr constant [24 x i8] c"Unable to open profiles\00", align 1
@TYPE_RGB_16 = common dso_local global i32 0, align 4
@cmsFLAGS_NOCACHE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32*, i32)* @SpeedTest16bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SpeedTest16bits(i8* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_5__*, align 8
  %17 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %4
  %21 = load i32*, i32** %7, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %20, %4
  %24 = call i32 @Die(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %25

25:                                               ; preds = %23, %20
  %26 = call i32 (...) @DbgThread()
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* @TYPE_RGB_16, align 4
  %29 = load i32*, i32** %7, align 8
  %30 = load i32, i32* @TYPE_RGB_16, align 4
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* @cmsFLAGS_NOCACHE, align 4
  %33 = call i32 @cmsCreateTransform(i32 %26, i32* %27, i32 %28, i32* %29, i32 %30, i32 %31, i32 %32)
  store i32 %33, i32* %15, align 4
  %34 = call i32 (...) @DbgThread()
  %35 = load i32*, i32** %6, align 8
  %36 = call i32 @cmsCloseProfile(i32 %34, i32* %35)
  %37 = call i32 (...) @DbgThread()
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @cmsCloseProfile(i32 %37, i32* %38)
  store i32 402653184, i32* %17, align 4
  %40 = load i32, i32* %17, align 4
  %41 = call i64 @malloc(i32 %40)
  %42 = inttoptr i64 %41 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %42, %struct.TYPE_5__** %16, align 8
  store i32 0, i32* %12, align 4
  store i32 0, i32* %9, align 4
  br label %43

43:                                               ; preds = %98, %25
  %44 = load i32, i32* %9, align 4
  %45 = icmp slt i32 %44, 256
  br i1 %45, label %46, label %101

46:                                               ; preds = %43
  store i32 0, i32* %10, align 4
  br label %47

47:                                               ; preds = %94, %46
  %48 = load i32, i32* %10, align 4
  %49 = icmp slt i32 %48, 256
  br i1 %49, label %50, label %97

50:                                               ; preds = %47
  store i32 0, i32* %11, align 4
  br label %51

51:                                               ; preds = %90, %50
  %52 = load i32, i32* %11, align 4
  %53 = icmp slt i32 %52, 256
  br i1 %53, label %54, label %93

54:                                               ; preds = %51
  %55 = load i32, i32* %9, align 4
  %56 = shl i32 %55, 8
  %57 = load i32, i32* %9, align 4
  %58 = or i32 %56, %57
  %59 = sext i32 %58 to i64
  %60 = inttoptr i64 %59 to i8*
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %62 = load i32, i32* %12, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i64 %63
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 2
  store i8* %60, i8** %65, align 8
  %66 = load i32, i32* %10, align 4
  %67 = shl i32 %66, 8
  %68 = load i32, i32* %10, align 4
  %69 = or i32 %67, %68
  %70 = sext i32 %69 to i64
  %71 = inttoptr i64 %70 to i8*
  %72 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %73 = load i32, i32* %12, align 4
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %72, i64 %74
  %76 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %75, i32 0, i32 1
  store i8* %71, i8** %76, align 8
  %77 = load i32, i32* %11, align 4
  %78 = shl i32 %77, 8
  %79 = load i32, i32* %11, align 4
  %80 = or i32 %78, %79
  %81 = sext i32 %80 to i64
  %82 = inttoptr i64 %81 to i8*
  %83 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %84 = load i32, i32* %12, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %83, i64 %85
  %87 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %86, i32 0, i32 0
  store i8* %82, i8** %87, align 8
  %88 = load i32, i32* %12, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %12, align 4
  br label %90

90:                                               ; preds = %54
  %91 = load i32, i32* %11, align 4
  %92 = add nsw i32 %91, 1
  store i32 %92, i32* %11, align 4
  br label %51

93:                                               ; preds = %51
  br label %94

94:                                               ; preds = %93
  %95 = load i32, i32* %10, align 4
  %96 = add nsw i32 %95, 1
  store i32 %96, i32* %10, align 4
  br label %47

97:                                               ; preds = %47
  br label %98

98:                                               ; preds = %97
  %99 = load i32, i32* %9, align 4
  %100 = add nsw i32 %99, 1
  store i32 %100, i32* %9, align 4
  br label %43

101:                                              ; preds = %43
  %102 = load i8*, i8** %5, align 8
  %103 = call i32 @TitlePerformance(i8* %102)
  %104 = call i64 (...) @clock()
  store i64 %104, i64* %13, align 8
  %105 = call i32 (...) @DbgThread()
  %106 = load i32, i32* %15, align 4
  %107 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %108 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %109 = call i32 @cmsDoTransform(i32 %105, i32 %106, %struct.TYPE_5__* %107, %struct.TYPE_5__* %108, i32 16777216)
  %110 = call i64 (...) @clock()
  %111 = load i64, i64* %13, align 8
  %112 = sub nsw i64 %110, %111
  store i64 %112, i64* %14, align 8
  %113 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %114 = call i32 @free(%struct.TYPE_5__* %113)
  %115 = load i32, i32* %17, align 4
  %116 = load i64, i64* %14, align 8
  %117 = call i32 @PrintPerformance(i32 %115, i32 24, i64 %116)
  %118 = call i32 (...) @DbgThread()
  %119 = load i32, i32* %15, align 4
  %120 = call i32 @cmsDeleteTransform(i32 %118, i32 %119)
  ret void
}

declare dso_local i32 @Die(i8*) #1

declare dso_local i32 @cmsCreateTransform(i32, i32*, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @cmsCloseProfile(i32, i32*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @TitlePerformance(i8*) #1

declare dso_local i64 @clock(...) #1

declare dso_local i32 @cmsDoTransform(i32, i32, %struct.TYPE_5__*, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1

declare dso_local i32 @PrintPerformance(i32, i32, i64) #1

declare dso_local i32 @cmsDeleteTransform(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
